--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.7.3
   google_maps_flutter: ^2.14.0
   geolocator: ^14.0.2
+  local_auth: ^3.0.0
 
 dev_dependencies:
   flutter_test:
