--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.14.0
   geolocator: ^14.0.2
   local_auth: ^3.0.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
