--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^14.0.2
   local_auth: ^3.0.0
   webview_flutter: ^4.13.0
+  flutter_local_notifications: ^19.5.0
 
 dev_dependencies:
   flutter_test:
